// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should default to process.cwd() and static server 1`] = `
"◈ Netlify Dev ◈
◈ No app server detected. Using simple static server
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Running static server from \\"site-with-index-file\\"

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘

"
`;

exports[`should detect a known framework 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888
sh: react-scripts: command not found
◈ Netlify Dev ◈
◈ Starting Netlify Dev with Create React App

> start
> react-scripts start

◈ Command failed with exit code 127: npm run start. Shutting down Netlify Dev server"
`;

exports[`should filter frameworks with no dev command 1`] = `
"◈ Netlify Dev ◈
◈ No app server detected. Using simple static server
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Running static server from \\"site-with-gulp\\"

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘

"
`;

exports[`should force a specific framework when configured 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888
◈ Netlify Dev ◈
◈ Starting Netlify Dev with Create React App
◈ Failed running command: react-scripts start. Please verify 'react-scripts' exists"
`;

exports[`should log the command if using static server and \`command\` is configured 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '--dir' flag was specified
◈ Running static server from \\"site-with-index-file/public\\"

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘

"
`;

exports[`should not run framework detection if command and targetPort are configured 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888 --command echo hello --targetPort 3000
◈ Netlify Dev ◈
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Starting Netlify Dev with custom config
hello
◈ \\"echo hello\\" exited with code 0. Shutting down Netlify Dev server"
`;

exports[`should pass framework-info env to framework sub process 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888
◈ Netlify Dev ◈
◈ Starting Netlify Dev with Gatsby

> develop
> node -p process.env.GATSBY_LOGGER

yurnalist
◈ \\"npm run develop\\" exited with code 0. Shutting down Netlify Dev server"
`;

exports[`should print specific error when command doesn't exist 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888 --command oops-i-did-it-again forgot-to-use-a-valid-command --targetPort 3000 --framework #custom
◈ Netlify Dev ◈
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Starting Netlify Dev with #custom
◈ Failed running command: oops-i-did-it-again forgot-to-use-a-valid-command. Please verify 'oops-i-did-it-again' exists"
`;

exports[`should prompt when multiple frameworks are detected 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline
sh: react-scripts: command not found
◈ Netlify Dev ◈
? Multiple possible start commands found (Use arrow keys or type to search)
> [Gatsby] 'npm run develop' 
  [Create React App] 'npm run start' ? Multiple possible start commands found 
  [Gatsby] 'npm run develop' 
> [Create React App] 'npm run start' ? Multiple possible start commands found Create React App-npm run start
Add 'framework = \\"create-react-app\\"' to the [dev] section of your netlify.toml to avoid this selection prompt next time
◈ Starting Netlify Dev with Create React App

> start
> react-scripts start

◈ Command failed with exit code 127: npm run start. Shutting down Netlify Dev server"
`;

exports[`should run \`command\` when both \`command\` and \`targetPort\` are configured 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888 --command echo hello --targetPort 3000
◈ Netlify Dev ◈
◈ Starting Netlify Dev with custom config
hello
◈ \\"echo hello\\" exited with code 0. Shutting down Netlify Dev server"
`;

exports[`should start custom command if framework=#custom, command and targetPort are configured 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888 --command echo hello --targetPort 3000
◈ Netlify Dev ◈
◈ Starting Netlify Dev with #custom
hello
◈ \\"echo hello\\" exited with code 0. Shutting down Netlify Dev server"
`;

exports[`should throw if framework=#custom but command is missing 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888 --targetPort 3000
◈ Netlify Dev ◈
◈ 'command' and 'targetPort' properties are required when 'framework' is set to '#custom'"
`;

exports[`should throw if framework=#custom but targetPort is missing 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888 --command echo hello
◈ Netlify Dev ◈
◈ 'command' and 'targetPort' properties are required when 'framework' is set to '#custom'"
`;

exports[`should throw when forcing a non supported framework 1`] = `
"Command failed with exit code *: /Users/lukasholzer/Sites/netlify/cli/bin/run dev --offline -p 88888 --staticServerPort 88888
◈ Netlify Dev ◈
◈ Invalid framework \\"to-infinity-and-beyond-js\\". It should be one of: *"
`;

exports[`should use static server when --dir flag is passed 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '--dir' flag was specified
◈ Running static server from \\"site-with-index-file/public\\"

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘

"
`;

exports[`should use static server when framework is set to #static 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '[dev.framework]' was set to '#static'
◈ Unable to determine public folder to serve files from. Using current working directory
◈ Setup a netlify.toml file with a [dev] section to specify your dev server settings.
◈ See docs at: https://cli.netlify.com/netlify-dev#project-detection
◈ Running static server from \\"site-with-index-file\\"

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘

"
`;

exports[`should warn if using static server and \`targetPort\` is configured 1`] = `
"◈ Netlify Dev ◈
◈ Using simple static server because '--dir' flag was specified
◈ Ignoring 'targetPort' setting since using a simple static server.
◈ Use --staticServerPort or [dev.staticServerPort] to configure the static server port
◈ Running static server from \\"site-with-index-file/public\\"

◈ Static server listening to 88888

   ┌──────────────────────────────────────────────────┐
   │                                                  │
   │   ◈ Server now ready on http://localhost:88888   │
   │                                                  │
   └──────────────────────────────────────────────────┘

"
`;
